--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	const noButton = document.getElementById("noButton");
 	let isMoving = false; // Track if the button is currently moving
 
-	noButton.addEventListener("mouseover", () => {
+	noButton.addEventListener("click", () => {
 		if (!isMoving) {
 			isMoving = true; // Set moving state to true
 			noButton.style.position = "absolute"; 
@@ -36,6 +36,7 @@
 		}
 	});
 </script>
+
 
 </body>
 </html>
