--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container">
 		<div class="love">
-			<h2>Are u <span>love</span> me</h2>
+			<h2>DO u <span>love</span> me</h2>
 			<button id="noButton" class="button">No</button>
 			<a id="yes" href="yes.html" class="button">Yes</a>
 		</div>
